--- a/static/css.css
+++ b/static/css.css
@@ -3,7 +3,9 @@
     font-family: "Lato";
     font-style: normal;
     font-weight: 400;
-    src: local("Lato Regular"), local("Lato-Regular"),
+    src:
+        local("Lato Regular"),
+        local("Lato-Regular"),
         url(fonts/S6uyw4BMUTPHjxAwXjeu.woff2) format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
         U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
@@ -13,7 +15,9 @@
     font-family: "Lato";
     font-style: normal;
     font-weight: 400;
-    src: local("Lato Regular"), local("Lato-Regular"),
+    src:
+        local("Lato Regular"),
+        local("Lato-Regular"),
         url(fonts/S6uyw4BMUTPHjx4wXg.woff2) format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
         U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
@@ -24,7 +28,9 @@
     font-family: "Lato";
     font-style: normal;
     font-weight: 700;
-    src: local("Lato Bold"), local("Lato-Bold"),
+    src:
+        local("Lato Bold"),
+        local("Lato-Bold"),
         url(fonts/S6u9w4BMUTPHh6UVSwaPGR_p.woff2) format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
         U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
@@ -34,7 +40,9 @@
     font-family: "Lato";
     font-style: normal;
     font-weight: 700;
-    src: local("Lato Bold"), local("Lato-Bold"),
+    src:
+        local("Lato Bold"),
+        local("Lato-Bold"),
         url(fonts/S6u9w4BMUTPHh6UVSwiPGQ.woff2) format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
         U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
